doctorant akhir 3yta et student login mrigla

--- a/design/1/newdoctorantpage.html
+++ b/design/1/newdoctorantpage.html
@@ -840,7 +840,7 @@
         <p class="welcome-text">Accédez à toutes les ressources et services dédiés aux doctorants de l'USTHB. Retrouvez l'ensemble des outils nécessaires pour gérer votre parcours académique et optimiser votre recherche.</p>
       </div>
       <div class="illustration-container">
-        <img src="student-colored.png" alt="Illustration doctorants" class="illustration" />
+        <img src="Student-doctorate.png" alt="Illustration doctorants" class="illustration" />
       </div>
     </div>
     <main>
