tout est regler

--- a/design/ats_login.html
+++ b/design/ats_login.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Environement Numerique de Travail
+            Espace ATS - USTHB
         </title>
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -390,7 +390,7 @@
             </button>
             <div class="logo-title">
                 <div class="logo">
-                    <img src="logo.png" alt="Logo ENT" />
+                    <img src="logo.jpg" alt="Logo ENT" />
                 </div>
                 <div class="title">
                     Environement Numerique de Travail
@@ -410,7 +410,7 @@
                             <label for="chk" aria-hidden="true">Connecter</label>
                             <input type="number" name="number" placeholder="Matricule" min="12" max="12">
                             <input type="password" name="password" placeholder="Mot de Passe" required="">
-                            <button><a href="ATS.html" ></a>Connecter</button>
+                            <button onclick="location.href='ats.html'">Connecter</button>
                         </form>
                     </div>
         
@@ -420,7 +420,7 @@
                             <input type="number" name="number" placeholder="Matricule" min="12" max="12">
                             <input type="password" name="pswd" placeholder="Mot de Passe" required="">
                             <input type="text" name="text" placeholder="Nom Complet" required="">
-                            <button><a href="ATS.html" ></a>Inscrire</button>
+                            <button onclick="location.href='ats.html'">Inscrire</button>
                         </form>
                     </div>
             </div>
