--- a/design/student.html
+++ b/design/student.html
@@ -86,7 +86,7 @@
     }
 
     .logo {
-      height: 40px;
+      height: 55px;
       width: auto;
     }
 
@@ -126,8 +126,6 @@ main.container {
 .dropdown-content {
   top: calc(100% + 0.5rem);
 }
-
-
 
     .nav-link {
       text-decoration: none;
@@ -957,7 +955,7 @@ body.dark .entry-form .form-control {
   <header>
     <div class="header-container">
       <div class="logo-container">
-        <img src="logo.png" alt="Logo USTHB" class="logo">
+        <img src="logo.jpg" alt="Logo USTHB" class="logo">
         <span class="university-name">ENT USTHB - Espace Etudiant</span>
       </div>
       
